# AudioDriven-Latent-Space-Tools-for-ComfyUI

./: AdvancedNoisePatterns  AdvancedNoisePatterns.py  NoiseToLatentConverter.py  README.md  __init__.py  audio_noise_nodes.py  librosa_analysis_node.py  pyproject.toml  timestamp-noise-node.py
.github/workflows/: music-to-latent.json
